💄 Style: Config 주석문 추가