@@ -24,6 +24,12 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+/**
+ * Security 설정을 담당하는 Configuration 클래스입니다.
+ *
+ * @since 2025-05-12
+ * @modified 2025-05-12
+ */
 @Configuration
 @RequiredArgsConstructor
 public class SecurityConfig {
@@ -36,46 +42,95 @@ public class SecurityConfig {
     private String HOST_NAME;
 
 
+    /**
+     * AuthenticationManager를 구성합니다.
+     * HttpSecurity에서 공유한 AuthenticationManagerBuilder를 사용하여 빌드합니다.
+     *
+     * @param http HttpSecurity
+     * @return AuthenticationManager 객체
+     * @author 박찬병
+     * @since 2025-05-13
+     * @modified 2025-05-13
+     */
     @Bean
     public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
         AuthenticationManagerBuilder authenticationManagerBuilder = http.getSharedObject(AuthenticationManagerBuilder.class);
         return authenticationManagerBuilder.build();
     }
 
+    /**
+     * PasswordEncoder를 구성합니다.
+     * DelegatingPasswordEncoder를 사용하여 다양한 인코딩 방식을 지원합니다.
+     *
+     * @return PasswordEncoder 객체
+     * @author 박찬병
+     * @since 2025-05-13
+     * @modified 2025-05-13
+     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return PasswordEncoderFactories.createDelegatingPasswordEncoder();
     }
 
+    /**
+     * SecurityFilterChain을 구성합니다.
+     * - HTTP Basic 및 CSRF 비활성화
+     * - CORS 설정 적용
+     * - 세션 무상태(STATELESS) 설정
+     * - 모든 요청 permitAll
+     * - 예외 처리 핸들러 등록
+     * - JWT 필터 추가
+     *
+     * @param http HttpSecurity
+     * @return SecurityFilterChain 객체
+     * @throws Exception 설정 중 예외 발생 시
+     * @author 박찬병
+     * @since 2025-05-13
+     * @modified 2025-05-13
+     */
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         return http
-                .httpBasic(AbstractHttpConfigurer::disable)
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(sessionManagement -> sessionManagement.sessionCreationPolicy(
-                        STATELESS))
-                .authorizeHttpRequests(authorizationManagerRequestMatcherRegistry ->
-                        authorizationManagerRequestMatcherRegistry
-                                .anyRequest().permitAll())
-                .exceptionHandling(e -> e
-                        .authenticationEntryPoint(customAuthenticationEntryPoint)
-                        .accessDeniedHandler(customAccessDeniedHandler))
-                .addFilterBefore(new JwtFilter(jwtAuthentication),
-                        UsernamePasswordAuthenticationFilter.class)
-                .build();
+            .httpBasic(AbstractHttpConfigurer::disable)
+            .csrf(AbstractHttpConfigurer::disable)
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .sessionManagement(sessionManagement -> sessionManagement.sessionCreationPolicy(
+                STATELESS))
+            .authorizeHttpRequests(authorizationManagerRequestMatcherRegistry ->
+                authorizationManagerRequestMatcherRegistry
+                    .anyRequest().permitAll())
+            .exceptionHandling(e -> e
+                .authenticationEntryPoint(customAuthenticationEntryPoint)
+                .accessDeniedHandler(customAccessDeniedHandler))
+            .addFilterBefore(new JwtFilter(jwtAuthentication),
+                UsernamePasswordAuthenticationFilter.class)
+            .build();
     }
 
+    /**
+     * CORS 설정을 구성합니다.
+     * Nginx에서 CORS 헤더를 처리하지 않는 경우를 대비해 Spring에서도 설정을 적용합니다.
+     * - 허용 Origin: 설정된 HOST_NAME
+     * - 허용 HTTP 메서드: HEAD, GET, POST, PUT, DELETE, PATCH
+     * - 모든 헤더 허용
+     * - 자격 증명 포함 허용 (Allow-Credentials)
+     *
+     * TODO Nginx에서 cors 설정을 모두 해줄 시 삭제
+     * @return CORS 설정 소스
+     * @author 박찬병
+     * @since 2025-05-13
+     * @modified 2025-05-13
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(HOST_NAME)); // 허용된 Origin
+        configuration.setAllowedOrigins(List.of(HOST_NAME));
         configuration.setAllowedMethods(
-                Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH")); // 허용된 HTTP 메서드
-        configuration.setAllowedHeaders(List.of("*")); // 모든 헤더 허용
-        configuration.setAllowCredentials(true); // 쿠키를 포함한 요청 허용
+            Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // 모든 경로에 적용
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
